apexanon/grammar.js
    parser_output: ($) => repeat($.statement),

    // Expressions

    update_expression: ($) =>
      prec.left(
        PREC.UNARY,
        choice(
          // Post (in|de)crement is evaluated before pre (in|de)crement
          seq($.expression, "++"),
          seq($.expression, "--"),
          seq("++", $.expression),
          seq("--", $.expression)
        )
      ),

    object_creation_expression: ($) =>
      $._unqualified_object_creation_expression,

    _unqualified_object_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          field("arguments", $.argument_list),
          optional($.class_body)
        )
      ),

    _property_navigation: ($) => seq(optional("?"), "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            optional(seq($.super, $._property_navigation)),
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier)
          )
        ),
        field("arguments", $.argument_list)
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body)
      ),

    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) =>
      choice(
        ci("global"),
        ci("public"),
        ci("testMethod"),
        ci("protected"),
        ci("override"),
        ci("private"),
        ci("virtual"),
        ci("abstract"),
        ci("static"),
        ci("final"),
        ci("transient"),
        ci("with sharing"),
        ci("without sharing"),
        ci("inherited sharing")
      ),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";"
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer)
          )
        )
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions))
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    void_type: ($) => ci("void"),
    _method_header: ($) =>
      seq(
        optional(
          seq(field("type_parameters", $.type_parameters), repeat($.annotation))
        ),
        field("type", $._unannotated_type),
        $._method_declarator
      ),

    formal_parameters: ($) => seq("(", commaJoined($.formal_parameter), ")"),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";"
      ),

    method_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._method_header,
        choice(field("body", $.block), ";")
      ),

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
  },
});
